--- a/BRShoppingList/Base.lproj/Main.storyboard
+++ b/BRShoppingList/Base.lproj/Main.storyboard
@@ -7,13 +7,13 @@
         <!--Shopping List-->
         <scene sceneID="HMG-I2-ASu">
             <objects>
-                <tableViewController id="ltT-YL-X2e" sceneMemberID="viewController">
+                <tableViewController id="ltT-YL-X2e" customClass="ShoppingListTableViewController" customModule="BRShoppingList" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="91" sectionHeaderHeight="22" sectionFooterHeight="22" id="NBe-26-KVN">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="91" id="TfH-6B-95E">
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ShoppingListCell" rowHeight="91" id="TfH-6B-95E" customClass="ShoppingListCell" customModule="BRShoppingList" customModuleProvider="target">
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="TfH-6B-95E" id="4MV-h3-blv">
                                     <autoresizingMask key="autoresizingMask"/>
@@ -26,6 +26,9 @@
                                         </label>
                                     </subviews>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="labelName" destination="unl-dc-Tu6" id="rOd-et-jes"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
